--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "An inspector for WebGL",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config core/webpack.config.js  --display-modules"
+    "build": "webpack --config core/webpack.config.js  --display-modules",
+    "compress": "grunt compress",
+    "publish": "grunt publish"
   },
   "babel": {
     "presets": [
@@ -34,7 +36,12 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "exports-loader": "^0.6.3",
+    "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-compress": "^1.4.1",
+    "grunt-webstore-upload": "^0.9.4",
     "imports-loader": "^0.7.0",
+    "load-grunt-tasks": "^3.5.2",
     "webpack": "^1.14.0",
     "webpack-load-plugins": "^0.1.2"
   }
