--- a/core/extensions/chrome/manifest.json
+++ b/core/extensions/chrome/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "minimum_chrome_version": "20",
   "name" : "WebGL Inspector - Beta",
-  "version" : "2.0.0",
+  "version" : "2.0.2",
   "homepage_url": "http://github.com/greggman/WebGL-Inspector/",
   "description" : "Debug, diagnose, and explore WebGL scenes.",
   "background" : {
@@ -31,30 +31,7 @@
   "web_accessible_resources": [
     "gli.all.css",
     "gli.all.js",
-    "assets/*",
-    "assets/array-buffer.png",
-    "assets/button-close.png",
-    "assets/button-options.png",
-    "assets/draw-info.png",
-    "assets/element-array-buffer.png",
-    "assets/grid.png",
-    "assets/gutter-arrow.png",
-    "assets/icon-current.png",
-    "assets/icon-error.png",
-    "assets/icon-warning.png",
-    "assets/isolated-call.png",
-    "assets/mini-button-left.png",
-    "assets/mini-button-right.png",
-    "assets/mini-button-span.png",
-    "assets/minibar-command-next.png",
-    "assets/minibar-command-prev.png",
-    "assets/minibar-command-rewind.png",
-    "assets/minibar-command-run.png",
-    "assets/minibar-command-rununtil.png",
-    "assets/minibar-span.png",
-    "assets/texture-2d.png",
-    "assets/texture-cube.png",
-    "assets/window-top-span.png"
+    "assets/*"
   ],
   "icons" : {
     "48" : "webgl-48.png",
