--- a/core/extensions/web-extension/manifest.json
+++ b/core/extensions/web-extension/manifest.json
@@ -1,31 +1,36 @@
 {
   "manifest_version": 2,
   "minimum_chrome_version": "20",
-  "name" : "WebGL Inspector - Beta",
-  "version" : "2.0.0",
+  "name": "WebGL Inspector - Beta",
+  "version": "2.0.3",
   "homepage_url": "http://github.com/greggman/WebGL-Inspector/",
-  "description" : "Debug, diagnose, and explore WebGL scenes.",
-  "background" : {
-    "scripts": ["background.js"]
+  "description": "Debug, diagnose, and explore WebGL scenes.",
+  "background": {
+    "scripts": [
+      "background.js"
+    ]
   },
   "permissions": [
-    "tabs", "http://*/*", "https://*/*"
+    "tabs",
+    "http://*/*",
+    "https://*/*"
   ],
-  "page_action" :
-  {
-    "default_icon" : "webgl-19.png",
-    "default_title" : "Debug with WebGL Inspector"
+  "page_action": {
+    "default_icon": "webgl-19.png",
+    "default_title": "Debug with WebGL Inspector"
   },
-  "content_scripts" : [
+  "content_scripts": [
     {
-      "matches" : [
+      "matches": [
         "file://*/*",
         "http://*/*",
         "https://*/*"
       ],
-      "js" : ["contentscript.js"],
-      "run_at" : "document_start",
-      "all_frames" : false
+      "js": [
+        "contentscript.js"
+      ],
+      "run_at": "document_start",
+      "all_frames": false
     }
   ],
   "web_accessible_resources": [
@@ -33,8 +38,8 @@
     "gli.all.js",
     "assets/*"
   ],
-  "icons" : {
-    "48" : "webgl-48.png",
-    "128" : "webgl-128.png"
+  "icons": {
+    "48": "webgl-48.png",
+    "128": "webgl-128.png"
   }
 }
